--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,7 +38,6 @@ jobs:
         uses: denoland/deployctl@v1
         with:
           project: "xuxin-astro"
-          entrypoint: "server/entry.mjs"
-          root: "dist"
+          entrypoint: dist/server/entry.mjs
           
           
