--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/react": "^19.1.5",
     "@types/react-dom": "^19.1.5",
     "astro": "^5.8.0",
+    "kleur": "^4.1.5",
     "prettier": "^3.5.3",
     "prettier-plugin-astro": "^0.14.1",
     "react": "^19.1.0",
