修改打包部署为node

--- a/package.json
+++ b/package.json
@@ -5,13 +5,13 @@
   "scripts": {
     "dev": "astro dev",
     "build": "astro build",
-    "//preview": "astro preview",
-    "preview": "deno run --allow-net --allow-read --allow-env ./dist/server/entry.mjs",
+    "preview": "astro preview",
     "astro": "astro",
     "fmt": "prettier . --write"
   },
   "dependencies": {
     "@astrojs/mdx": "^4.3.0",
+    "@astrojs/node": "^9.2.2",
     "@astrojs/react": "^4.3.0",
     "@astrojs/solid-js": "^5.1.0",
     "@astrojs/svelte": "^7.1.0",
@@ -22,7 +22,6 @@
     "@types/react": "^19.1.5",
     "@types/react-dom": "^19.1.5",
     "astro": "^5.8.0",
-    "kleur": "^4.1.5",
     "prettier": "^3.5.3",
     "prettier-plugin-astro": "^0.14.1",
     "react": "^19.1.0",
