--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
   "exclude": ["dist"],
   "compilerOptions": {
     "jsx": "preserve",
+    "jsxImportSource": "solid-js",
     "baseUrl": "./",
     "paths": {
       "@/*": ["src/*"]
