--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@tailwindcss/vite": "^4.1.7",
     "@types/react": "^19.1.5",
     "@types/react-dom": "^19.1.5",
+    "animejs": "^4.0.2",
     "astro": "^5.8.0",
     "prettier": "^3.5.3",
     "prettier-plugin-astro": "^0.14.1",
